# pyslsk

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  auth.py  client.py  connection.py  constants.py  download.py  events.py  exceptions.py  protocol.py  search.py  types.py
test/: test.py
